--- a/Lap2/.vscode/settings.json
+++ b/Lap2/.vscode/settings.json
@@ -6,6 +6,7 @@
     "string_view": "cpp",
     "initializer_list": "cpp",
     "new": "cpp",
-    "limits": "cpp"
+    "limits": "cpp",
+    "ostream": "cpp"
   }
 }
